--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -15,3 +15,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: make
       run: make -C 3_Implementation/ all
+    - name: main
+    - run: ./main -C 3_Implementation/
