--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: make
       run: make -C 3_Implementation/ all
-    - name: main
-      run: ./main -C 3_Implementation/
+    - name: run
+      run: ./main --ci
 
