--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: make
-      run: -C 3_Implementation/ all
+      run: make -C 3_Implementation/ all
 
