--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -14,5 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
-    - name: make test
-      run:  make test -C 3_Implementation/
+    - name: make
+      run:  make -C 3_Implementation/
