--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: make
-      run: make -C 3_Implementation/ all
+      run: make 3_Implementation
     - name: run
-      run: ./main --ci 3_Implementation/ all
+      run: ./main --ci 3_Implementation
 
